Fixing a lot of alignment issues

--- a/css/general.css
+++ b/css/general.css
@@ -18,31 +18,45 @@ html {
 
 #super-header {
 	margin-bottom: 2em;
-	background: #444444;
 }
 
 #header {
-	height: 8em;
+	display: block;
+	overflow: auto;
+	background: red;
 }
 
 #header h1 {
 	text-align: center;
 	display: block;
-	margin-top: calc((8em - 2.5em)/2);
+	padding-top: 10px;
+}
+
+nav {
+	display: block;
+	overflow: auto;
+	min-height: 2em;
 }
 
 nav a {
 	float: left;
 	display: block;
+	overflow: auto;
 	width: 25%;
 	text-align: center;
-	height: 2em;
+	min-height: 2em;
 }
 
 #content {
 	margin: 0 auto;
 	width: 81ch;
-	padding-top: 2em;
+}
+
+@media screen and (max-width: 815px) {
+	#content {
+		padding-left: 5%;
+		width: 95%;
+	}
 }
 
 #footer {
